# LBM

./: Cargo.toml  README.md  code_with_structure.txt
debug/: uy.txt
src/: graph.rs  lattice.rs  lib.rs  main.rs
src/window/: mod.rs  render.rs  shader.wgsl  texture.rs
