[package]
name = "lbm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "*"

rand = "0.8"




anyhow = "1.0"
env_logger = "0.10"
pollster = "0.3"
log = "0.4"
wgpu = "0.19" #really out of date
winit = { version = "0.29", features = ["rwh_05"] }#really out of date
bytemuck = { version = "1.12", features = [ "derive" ] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]



[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
